--- a/SocialMediaAppAna/Views/Shared/_Layout.cshtml
+++ b/SocialMediaAppAna/Views/Shared/_Layout.cshtml
@@ -23,7 +23,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Posts" asp-action="Index">Afisare postari</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Posts" asp-action="New">Adaugare postare</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
