--- a/SocialMediaAppAna/Views/Shared/_Layout.cshtml
+++ b/SocialMediaAppAna/Views/Shared/_Layout.cshtml
@@ -28,6 +28,24 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Posts" asp-action="New">Adaugare postare</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Afisare utilizatori</a>
+                        </li>
+
+                        @{
+                            var userId = User.FindFirst(System.Security.Claims.ClaimTypes.NameIdentifier)?.Value;
+                        }
+
+                        @if (!string.IsNullOrEmpty(userId))
+                        {
+                            <a class="nav-link text-dark" asp-controller="Users" asp-action="Show" asp-route-id="@userId">Afisare profil</a>
+                        }
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Groups" asp-action="Index">Grupuri</a>
+                        </li>
+
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
