--- a/SocialMediaAppAna/Views/Users/Edit.cshtml
+++ b/SocialMediaAppAna/Views/Users/Edit.cshtml
@@ -8,7 +8,7 @@
 
     <i class="bi bi-person"></i>
 
-    <label asp-for="FirstName">Preume</label>
+    <label asp-for="FirstName">Prenume</label>
     <br />
     <input asp-for="FirstName" class="form-control" />
     <br />
