--- a/SocialMediaAppAna/Views/Users/Index.cshtml
+++ b/SocialMediaAppAna/Views/Users/Index.cshtml
@@ -18,6 +18,7 @@
 </form>
 
 
+
 <div class="row">
 @foreach (var user in ViewBag.UsersList)
 {
@@ -62,7 +63,50 @@
                         </form>
                     </div>
                 }   
-                
+                @if (user.Visibility == "Private")
+                {
+                    @*buton cerere   - merge sa faci cererea dar nu se modifica scrisul de pe buton*@
+                    <form method="post" asp-controller="Follows" asp-action="Follow" asp-route-followedId="@user.Id">
+                        @if (ViewBag.FollowStatus != null && ViewBag.FollowStatus.ContainsKey(user.Id))
+                        {
+                            var status = ViewBag.FollowStatus[user.Id];
+                            if (status == "Pending")
+                            {
+                                <button type="button" class="btn btn-warning btn-sm" disabled>Cerere trimisa</button>
+                            }
+                            else if (status == "Accepted")
+                            {
+                                <button type="button" class="btn btn-success btn-sm" disabled>Prieteni</button>
+                            }
+                            else
+                            {
+                                <button type="submit" class="btn btn-primary btn-sm">Follow</button>
+                            }
+                        }
+                        else
+                        {
+                            <button type="submit" class="btn btn-primary btn-sm">Follow</button>
+                        }
+                    </form>
+                }
+                    
+
+                @*buton cerere    ?????
+                <form method="post" asp-controller="Follows" asp-action="Follow" asp-route-followedId="@user.Id">
+
+                @if (user.FollowStatus.ContainsKey(user.Id) && Model.FollowStatus[user.Id] == "Friend")
+                {
+                    <button class="btn btn-secondary" disabled>Prieten</button>
+                }
+                else if (Model.FollowStatus.ContainsKey(user.Id) && Model.FollowStatus[user.Id] == "Pending")
+                {
+                    <button class="btn btn-warning" disabled>Cerere trimisa</button>
+                }
+                else
+                {
+                     <button class="btn btn-primary">Follow</button>
+                }
+                </form>*@
 
                 
 
