modificari inainte de design

--- a/SocialMediaAppAna/Views/Users/Show.cshtml
+++ b/SocialMediaAppAna/Views/Users/Show.cshtml
@@ -85,6 +85,10 @@
 
                 </div>
             </div>
+
+                @* Buton care duce la postare *@
+                <a class="btn btn-success" asp-controller="Posts" asp-action="Show" asp-route-id="@post.Id">Afisare postare</a>
+
             </div>
             <br />
 
