--- a/SocialMediaAppAna/Views/Users/Index.cshtml
+++ b/SocialMediaAppAna/Views/Users/Index.cshtml
@@ -2,7 +2,7 @@
 <br />
 <br />
 
-@if(ViewBag.Message != null)
+@if (ViewBag.Message != null)
 {
     <div class="alert-success p-3 rounded-3 text-center mb-5 @ViewBag.Alert">
         @ViewBag.Message
@@ -18,105 +18,111 @@
 </form>
 
 
-
 <div class="row">
-@foreach (var user in ViewBag.UsersList)
-{
-    <div class="col-4 mb-4">
+    @foreach (var user in ViewBag.UsersList)
+    {
+        <div class="col-4 mb-4">
             <div class="card" style="height:100%; width: 100%;">
-        
-            <div class="card-body d-flex justify-content-between flex-column">
-                <div>
-                    @if (!string.IsNullOrEmpty(user.Image))
-                    {
-                        <img src="@user.Image" alt="Poza Profil" class="img-fluid rounded-circle" style="width: 100px; height: 100px;"> 
-                    }
 
-                    @if (@user.FirstName != null && @user.LastName != null)
-                    {
-                        <p><i class="bi bi-person"> </i> Nume utilizator: @user.FirstName @user.LastName</p>
-                    }
-
-                    @if (@user.Content != null)
-                    {
-                        <p><i class="bi-info-circle"></i> Descriere utilizator: @user.Content</p>
-                    }
-
-                </div>
-
-
-                @* din index se vede doar butonul de vizualizare profil doar daca e public*@
-                @if (user.Visibility == "Public" || (ViewBag.UserCurent != null && (string)user.Id == ViewBag.UserCurent.Id))
-                {
-                    <div class="d-flex flex-row justify-content-between p-3">
-                        <a asp-controller="Users" asp-action="Show" asp-route-id="@user.Id" class="btn btn-sm btn-success">Vizualizare utilizator</a>
-
-                    </div>
-                }
-
-                @* Si daca adminul vrea sa stearga??? *@
-                @if ((string)user.Id != ViewBag.UserCurent.Id && User.IsInRole("Admin"))
-                {
-                    <div class="d-flex flex-row justify-content-between p-3">
-                        <form asp-controller="Users" asp-action="Delete" method="post" asp-route-id="@user.Id">
-                            <button type="submit" class="btn btn-danger">Sterge utilizator</button>
-                        </form>
-                    </div>
-                }   
-                @if (user.Visibility == "Private")
-                {
-                    @*buton cerere   - merge sa faci cererea dar nu se modifica scrisul de pe buton*@
-                    <form method="post" asp-controller="Follows" asp-action="Follow" asp-route-followedId="@user.Id">
-                        @if (ViewBag.FollowStatus != null && ViewBag.FollowStatus.ContainsKey(user.Id))
+                <div class="card-body d-flex justify-content-between flex-column">
+                    <div>
+                        @if (!string.IsNullOrEmpty(user.Image))
                         {
-                            var status = ViewBag.FollowStatus[user.Id];
-                            if (status == "Pending")
+                            <img src="@user.Image" alt="Poza Profil" class="img-fluid rounded-circle" style="width: 100px; height: 100px;">
+                        }
+
+                        @if (@user.FirstName != null && @user.LastName != null)
+                        {
+                            <p><i class="bi bi-person"> </i> Nume utilizator: @user.FirstName @user.LastName</p>
+                        }
+
+                        @if (@user.Content != null)
+                        {
+                            <p><i class="bi-info-circle"></i> Descriere utilizator: @user.Content</p>
+                        }
+
+                    </div>
+
+
+                    @* din index se vede doar butonul de vizualizare profil doar daca e public*@
+                    @* se vede butonul si daca utilizatorii sunt prieteni *@
+
+                    @if (user.Visibility == "Public" || (ViewBag.UserCurent != null && (string)user.Id == ViewBag.UserCurent.Id) ||
+                   (ViewBag.Friends != null && ViewBag.Friends.Contains(user.Id)))
+                    {
+                        <div class="d-flex flex-row justify-content-between p-3">
+                            <a asp-controller="Users" asp-action="Show" asp-route-id="@user.Id" class="btn btn-sm btn-success">Vizualizare utilizator</a>
+
+                        </div>
+                    }
+
+                    @* Si daca adminul vrea sa stearga??? *@
+                    @if ((string)user.Id != ViewBag.UserCurent.Id && User.IsInRole("Admin"))
+                    {
+                        <div class="d-flex flex-row justify-content-between p-3">
+                            <form asp-controller="Users" asp-action="Delete" method="post" asp-route-id="@user.Id">
+                                <button type="submit" class="btn btn-danger">Sterge utilizator</button>
+                            </form>
+                        </div>
+                    }
+
+
+                    @* daca profilul e privat si utilizatorul curent nu e prieten cu celalat utilizator *@
+                    @* follow *@
+                    @if (user.Visibility == "Private" && (ViewBag.Friends == null || !ViewBag.Friends.Contains(user.Id)))
+                    {
+                        @*buton cerere   - merge sa faci cererea dar nu se modifica scrisul de pe buton*@
+                        @* nu e ViewBag.FollowStatus in controller si nu intra pe primul if *@
+                        @* am rezolvat problema nu mai e nevoie de FollowStatus se modifica scrisul*@
+                        <form method="post" asp-controller="Follows" asp-action="Follow" asp-route-followedId="@user.Id">
+                            @if (ViewBag.FollowStatus != null && ViewBag.FollowStatus.ContainsKey(user.Id))
                             {
-                                <button type="button" class="btn btn-warning btn-sm" disabled>Cerere trimisa</button>
-                            }
-                            else if (status == "Accepted")
-                            {
-                                <button type="button" class="btn btn-success btn-sm" disabled>Prieteni</button>
+                                var status = ViewBag.FollowStatus[user.Id];
+                                if (status == "Pending")
+                                {
+                                    <button type="button" class="btn btn-warning btn-sm" disabled>Cerere trimisa</button>
+                                }
+                                else if (status == "Accepted")
+                                {
+                                    <button type="button" class="btn btn-success btn-sm" disabled>Prieteni</button>
+                                }
+                                else
+                                {
+                                    <button type="submit" class="btn btn-primary btn-sm">Follow</button>
+                                }
                             }
                             else
                             {
                                 <button type="submit" class="btn btn-primary btn-sm">Follow</button>
                             }
-                        }
-                        else
-                        {
-                            <button type="submit" class="btn btn-primary btn-sm">Follow</button>
-                        }
-                    </form>
-                }
-                    
+                        </form>
+                    }
 
-                @*buton cerere    ?????
+                    @*buton cerere    ?????
                 <form method="post" asp-controller="Follows" asp-action="Follow" asp-route-followedId="@user.Id">
-
                 @if (user.FollowStatus.ContainsKey(user.Id) && Model.FollowStatus[user.Id] == "Friend")
                 {
-                    <button class="btn btn-secondary" disabled>Prieten</button>
+                <button class="btn btn-secondary" disabled>Prieten</button>
                 }
                 else if (Model.FollowStatus.ContainsKey(user.Id) && Model.FollowStatus[user.Id] == "Pending")
                 {
-                    <button class="btn btn-warning" disabled>Cerere trimisa</button>
+                <button class="btn btn-warning" disabled>Cerere trimisa</button>
                 }
                 else
                 {
-                     <button class="btn btn-primary">Follow</button>
+                <button class="btn btn-primary">Follow</button>
                 }
                 </form>*@
 
-                
 
+
+
+                </div>
             </div>
-         </div>
-    </div>
-}
-   
+        </div>
+    }
+
 </div>
 
-    <br />
-    <br />
-
+<br />
+<br />
