butoane de intoarcere

--- a/SocialMediaAppAna/Views/Groups/Show.cshtml
+++ b/SocialMediaAppAna/Views/Groups/Show.cshtml
@@ -1,6 +1,11 @@
 ﻿@model SocialMediaAppAna.Models.Group
 
 
+@* buton pt a te inroarce la pagina de index*@
+<form asp-action="Index" asp-controller="Groups">
+    <button type="submit" class="btn btn-outline-success mt-3">Intoarce-te la pagina principala</button>
+</form>
+<br />
 
 <div class="container py-4">
     <div class="card shadow-sm mb-4">
