--- a/SocialMediaAppAna/Views/Users/Show.cshtml
+++ b/SocialMediaAppAna/Views/Users/Show.cshtml
@@ -9,6 +9,12 @@
         </div>
     }
 
+    @* buton pt a te inroarce la pagina de index*@
+    <form asp-action="Index" asp-controller="Users">
+        <button type="submit" class="btn btn-outline-success mt-3">Intoarce-te la pagina principala</button>
+    </form>
+    <br />
+
     <div class="card profile-card mb-5">
         <div class="card-body">
             <div class="d-flex flex-column">
