--- a/SocialMediaAppAna/Views/Posts/Show.cshtml
+++ b/SocialMediaAppAna/Views/Posts/Show.cshtml
@@ -9,6 +9,13 @@
         </div>
     }
 
+    <br />
+    @* buton pt a te inroarce la pagina de index*@
+    <form asp-action="Index" asp-controller="Posts">
+        <button type="submit" class="btn btn-outline-success mt-3">Intoarce-te la pagina principala</button>
+    </form>
+    <br />
+
     <div class="card shadow-sm mb-4">
         <div class="card-body">
            
